Bug 1274044: Relax assertion in nsStandardURL for case when mDefaultPort is -1. r=valentin

The assertion is trying to require that the caller should never pass in mDefaultPort; instead, the caller should pass -1. BUT, if mDefaultPort is itself -1 (i.e. there's no default port), then we need to allow the caller to pass in -1 without spamming an assertion.

MozReview-Commit-ID: GKxndkJoXcv

--HG--
extra : rebase_source : 3fcd7815ec3e64a71f0f34efd1a397be8f3dc9a2